--- a/Catering/index.html
+++ b/Catering/index.html
@@ -4,50 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
-      .box {
-        width: 100%;
-        height: 50px;
-        background-color: gray;
-        display: inline-block;
-      }
-      .container {
-        position: fixed;
-        display: flex;
-        box-shadow: 1px -1px 46px -2px rgba(0, 0, 0, 0.75);
-        background-color: whitesmoke;
-        width: 100%;
-        padding: 20px;
-        justify-content: space-between;
-        align-items: center;
-        position: sticky;
-        top: 0;
-      }
-      .pos-fixed:hover {
-        background-color: rgb(150, 150, 150);
-        cursor: pointer;
-      }
-      .pos-fixed {
-        padding: 20px;
-        text-align: center;
-        border-radius: 5px;
-        font-size: 21px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <header>
       <p class="pos-fixed">Gourmet Restaurant Thing</p>
       <div>
         <a href="" class="pos-fixed">About</a>
         <a href="" class="pos-fixed">Menu</a>
         <a href="" class="pos-fixed">Contact</a>
       </div>
+    </header>
+    <div class="burger-image">
+      <p class="Le">Le Catering</p>
     </div>
+    <section id="about">
+      <div class="image">
+        <img
+          src="https://www.w3schools.com/w3images/tablesetting2.jpg"
+          alt="Catering Dish"
+        />
+      </div>
+      <div class="content">
+        <h1>About Catering</h1>
+        <h2><strong>Tradition since 1889</strong></h2>
+        <p>
+          The Catering was founded in 1889 by Mr. Smith in keen ipsum dolor sit
+          amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+          dolore eu fugiat nulla pariatur.
+        </p>
+        <p class="transparent">
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+          officia deserunt mollit anim id est laborum consectetur adipiscing
+          elit, sed do eiusmod temporincididunt ut labore et dolore magna
+          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
