--- a/Catering/index.html
+++ b/Catering/index.html
@@ -45,5 +45,31 @@
         </p>
       </div>
     </section>
+    <div class="line"></div>
+    <section id="menu">
+      <div class="content-menu">
+        <h1>Our Menu</h1>
+        <h4>Bread Basket</h4>
+        <h6>Assortment of fresh baked fruit breads and muffins 5.50</h6>
+        <h4>Honey Almond Granola with Fruits</h4>
+        <h6>
+          Natural cereal of honey toasted oats, raisins, almonds and dates 7.00
+        </h6>
+        <h4>Belgian Waffle</h4>
+        <h6>Vanilla flavored batter with malted flour 7.50</h6>
+        <h4>Scrambled eggs</h4>
+        <h6>
+          Scrambled eggs, roasted red pepper and garlic, with green onions 7.50
+        </h6>
+        <h4>Blueberry Pancakes</h4>
+        <h6>With syrup, butter and lots of berries 8.50</h6>
+      </div>
+      <div class="image">
+        <img
+          src="https://www.w3schools.com/w3images/tablesetting.jpg"
+          alt="table setting"
+        />
+      </div>
+    </section>
   </body>
 </html>
