--- a/Catering/index.html
+++ b/Catering/index.html
@@ -71,5 +71,27 @@
         />
       </div>
     </section>
+    <div class="line"></div>
+    <section id="contact">
+      <h1>Contact</h1>
+      <p>
+        We offer full-service catering for any event, large or small. We
+        understand your needs and we will cater the food to satisfy the biggest
+        criteria of them all, both look and taste. Do not hesitate to contact
+        us.
+      </p>
+      <h2>Catering Service, 42nd Living St, 43043 New York, NY</h2>
+      <p>
+        You can also contact us by phone 00553123-2323 or email
+        catering@catering.com, or you can send us a message here:
+      </p>
+      <form>
+        <input type="text" placeholder="Name" />
+        <input placeholder="How many people" type="number" />
+        <input type="datetime-local" id="meeting-time" name="meeting-time" />
+        <input type="text" placeholder="Message \ Special requirements" />
+        <button type="submit">SEND MESSAGE</button>
+      </form>
+    </section>
   </body>
 </html>
