--- a/array&object/index.html
+++ b/array&object/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./loop.js"></script>
+    <script src="./ex-array.js"></script>
   </body>
 </html>
